@@ -300,24 +300,6 @@ SCIP_RETCODE SCIPupgradeConsLinear(
    SCIP_CONS**           upgdcons            /**< pointer to store upgraded constraint, or NULL if not successful */
    );
 
-/** forbids upgrading of constraint */
-EXTERN
-SCIP_RETCODE SCIPmarkDoNotUpgradeConsLinear(
-   SCIP*                 scip,               /**< SCIP data structure */
-   SCIP_CONS*            cons                /**< linear constraint to mark */
-   );
-
-/** sets upgrading flag of linear constraint
- *
- *  @note the donotupgrade flag should only be changed from TRUE to FALSE, by the caller who set it to TRUE
- */
-EXTERN
-SCIP_RETCODE SCIPsetUpgradeConsLinear(
-   SCIP*                 scip,               /**< SCIP data structure */
-   SCIP_CONS*            cons,               /**< linear constraint to mark */
-   SCIP_Bool             upgradeallowed      /**< allow upgrading? */
-   );
-
 #ifdef __cplusplus
 }
 #endif
